--- a/public/foods/index.html
+++ b/public/foods/index.html
@@ -690,7 +690,7 @@
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
             
             <!-- Food Card 1 -->
-            <div class="bg-white rounded-2xl shadow-sm overflow-hidden hover:shadow-lg transition-shadow cursor-pointer group">
+            <section class="bg-white rounded-2xl shadow-sm overflow-hidden hover:shadow-lg transition-shadow cursor-pointer group">
                 <div class="relative">
                     <img src="https://images.unsplash.com/photo-1626082927389-6cd097cdc6ec?w=600&h=400&fit=crop" 
                          alt="Grilled Salmon" 
@@ -718,10 +718,10 @@
                         </button>
                     </div>
                 </div>
-            </div>
+            </section>
 
             <!-- Food Card 2 -->
-            <div class="bg-white rounded-2xl shadow-sm overflow-hidden hover:shadow-lg transition-shadow cursor-pointer group">
+            <section class="bg-white rounded-2xl shadow-sm overflow-hidden hover:shadow-lg transition-shadow cursor-pointer group">
                 <div class="relative">
                     <img src="https://images.unsplash.com/photo-1565299624946-b28f40a0ae38?w=600&h=400&fit=crop" 
                          alt="Margherita Pizza" 
@@ -749,10 +749,10 @@
                         </button>
                     </div>
                 </div>
-            </div>
+            </dsectioniv>
 
             <!-- Food Card 3 -->
-            <div class="bg-white rounded-2xl shadow-sm overflow-hidden hover:shadow-lg transition-shadow cursor-pointer group">
+            <section class="bg-white rounded-2xl shadow-sm overflow-hidden hover:shadow-lg transition-shadow cursor-pointer group">
                 <div class="relative">
                     <img src="https://images.unsplash.com/photo-1565299585323-38d6b0865b47?w=600&h=400&fit=crop" 
                          alt="Beef Tacos" 
@@ -780,10 +780,10 @@
                         </button>
                     </div>
                 </div>
-            </div>
+            </section>
 
             <!-- Food Card 4 -->
-            <div class="bg-white rounded-2xl shadow-sm overflow-hidden hover:shadow-lg transition-shadow cursor-pointer group">
+            <section class="bg-white rounded-2xl shadow-sm overflow-hidden hover:shadow-lg transition-shadow cursor-pointer group">
                 <div class="relative">
                     <img src="https://images.unsplash.com/photo-1512621776951-a57141f2eefd?w=600&h=400&fit=crop" 
                          alt="Vegetable Bowl" 
@@ -811,10 +811,10 @@
                         </button>
                     </div>
                 </div>
-            </div>
+            </section>
 
             <!-- Food Card 5 -->
-            <div class="bg-white rounded-2xl shadow-sm overflow-hidden hover:shadow-lg transition-shadow cursor-pointer group">
+            <section class="bg-white rounded-2xl shadow-sm overflow-hidden hover:shadow-lg transition-shadow cursor-pointer group">
                 <div class="relative">
                     <img src="https://images.unsplash.com/photo-1600891964092-4316c288032e?w=600&h=400&fit=crop" 
                          alt="Pad Thai" 
@@ -842,10 +842,10 @@
                         </button>
                     </div>
                 </div>
-            </div>
+            </section>
 
             <!-- Food Card 6 -->
-            <div class="bg-white rounded-2xl shadow-sm overflow-hidden hover:shadow-lg transition-shadow cursor-pointer group">
+            <section class="bg-white rounded-2xl shadow-sm overflow-hidden hover:shadow-lg transition-shadow cursor-pointer group">
                 <div class="relative">
                     <img src="https://images.unsplash.com/photo-1603894584373-5ac82b2ae398?w=600&h=400&fit=crop" 
                          alt="Chicken Parmesan" 
@@ -873,7 +873,7 @@
                         </button>
                     </div>
                 </div>
-            </div>
+            </section>
 
         </div>
       </section>
