--- a/public/foods/index.html
+++ b/public/foods/index.html
@@ -690,7 +690,7 @@
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
             
             <!-- Food Card 1 -->
-            <section class="bg-white rounded-2xl shadow-sm overflow-hidden hover:shadow-lg transition-shadow cursor-pointer group">
+            <div class="bg-white rounded-2xl shadow-sm overflow-hidden hover:shadow-lg transition-shadow cursor-pointer group">
                 <div class="relative">
                     <img src="https://images.unsplash.com/photo-1626082927389-6cd097cdc6ec?w=600&h=400&fit=crop" 
                          alt="Grilled Salmon" 
@@ -718,10 +718,10 @@
                         </button>
                     </div>
                 </div>
-            </section>
+            </div>
 
             <!-- Food Card 2 -->
-            <section class="bg-white rounded-2xl shadow-sm overflow-hidden hover:shadow-lg transition-shadow cursor-pointer group">
+            <div class="bg-white rounded-2xl shadow-sm overflow-hidden hover:shadow-lg transition-shadow cursor-pointer group">
                 <div class="relative">
                     <img src="https://images.unsplash.com/photo-1565299624946-b28f40a0ae38?w=600&h=400&fit=crop" 
                          alt="Margherita Pizza" 
@@ -749,10 +749,10 @@
                         </button>
                     </div>
                 </div>
-            </dsectioniv>
+            </div>
 
             <!-- Food Card 3 -->
-            <section class="bg-white rounded-2xl shadow-sm overflow-hidden hover:shadow-lg transition-shadow cursor-pointer group">
+            <div class="bg-white rounded-2xl shadow-sm overflow-hidden hover:shadow-lg transition-shadow cursor-pointer group">
                 <div class="relative">
                     <img src="https://images.unsplash.com/photo-1565299585323-38d6b0865b47?w=600&h=400&fit=crop" 
                          alt="Beef Tacos" 
@@ -780,7 +780,7 @@
                         </button>
                     </div>
                 </div>
-            </section>
+            </div>
 
             <!-- Food Card 4 -->
             <section class="bg-white rounded-2xl shadow-sm overflow-hidden hover:shadow-lg transition-shadow cursor-pointer group">
@@ -802,7 +802,7 @@
                         <span class="text-xs text-gray-500 font-medium">Vegetarian</span>
                         <span class="text-xs text-gray-500">15-20 min</span>
                     </div>
-                    <h3 class="text-xl font-bold text-gray-900 mb-2 group-hover:text-orange-500 transition-colors">Buddha Bowl</h3>
+                    <h3 class="text-xl font-bold text-gray-900 mb-2 group-hover:text-orange-500 transition-colors">Buddha Bowl - 1 </h3>
                     <p class="text-gray-600 text-sm mb-3 line-clamp-2">Nutritious grain bowl with roasted vegetables, quinoa, and tahini dressing.</p>
                     <div class="flex items-center justify-between">
                         <span class="text-2xl font-bold text-gray-900">$16.99</span>
@@ -814,7 +814,7 @@
             </section>
 
             <!-- Food Card 5 -->
-            <section class="bg-white rounded-2xl shadow-sm overflow-hidden hover:shadow-lg transition-shadow cursor-pointer group">
+            <div class="bg-white rounded-2xl shadow-sm overflow-hidden hover:shadow-lg transition-shadow cursor-pointer group">
                 <div class="relative">
                     <img src="https://images.unsplash.com/photo-1600891964092-4316c288032e?w=600&h=400&fit=crop" 
                          alt="Pad Thai" 
@@ -842,10 +842,10 @@
                         </button>
                     </div>
                 </div>
-            </section>
+            </div>
 
             <!-- Food Card 6 -->
-            <section class="bg-white rounded-2xl shadow-sm overflow-hidden hover:shadow-lg transition-shadow cursor-pointer group">
+            <div class="bg-white rounded-2xl shadow-sm overflow-hidden hover:shadow-lg transition-shadow cursor-pointer group">
                 <div class="relative">
                     <img src="https://images.unsplash.com/photo-1603894584373-5ac82b2ae398?w=600&h=400&fit=crop" 
                          alt="Chicken Parmesan" 
@@ -873,7 +873,7 @@
                         </button>
                     </div>
                 </div>
-            </section>
+            </div>
 
         </div>
       </section>
@@ -900,7 +900,7 @@
             <button class="mini-next absolute right-2 top-1/2 transform -translate-y-1/2 bg-white bg-opacity-70 hover:bg-opacity-90 text-gray-800 p-1 rounded-full text-sm">›</button>
         </div>
 
-        <section class="pt-3 pb-4 px-1 relative">
+    <section class="pt-3 pb-4 px-1 relative border-t border-gray-200">
             <div class="flex items-center gap-2 mb-2">
                 <span class="bg-orange-500 text-white text-xs font-bold px-2 py-0.5 rounded">
                     9.4
@@ -912,8 +912,7 @@
             </div>
 
             <div class="mb-2">
-                <h3 class="text-xl font-bold text-gray-900 truncate">Tacos Los Cholos</h3>
-                
+                <h3 class="text-xl font-bold text-gray-900 truncate">Tacos Los Cholos-2</h3>
                 <p class="text-black text-base">Philadelphia</p>
             </div>
 
@@ -932,7 +931,10 @@
             <a href="#" class="absolute inset-0 z-10">
                 <span class="sr-only">View Details</span>
             </a>
-        </section>
+  </section>
+
+
+
     </div>
 </div>
 
