--- a/public/foods/index.html
+++ b/public/foods/index.html
@@ -685,6 +685,212 @@
     </div>
 
 <!-- new test food carousal start -->
+<!-- part1 -->
+ <section class="px-4 pb-12 md:px-8 lg:px-16 xl:px-24">
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-3">
+        
+        <div class="bg-white rounded-2xl shadow-sm overflow-hidden hover:shadow-lg transition-shadow cursor-pointer group flex flex-col border border-gray-100">
+            <div class="relative border-b border-gray-300">
+                <img src="https://images.unsplash.com/photo-1626082927389-6cd097cdc6ec?w=600&h=400&fit=crop" alt="Grilled Salmon" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
+                <div class="absolute top-4 left-4">
+                    <span class="bg-orange-500 text-white text-sm font-bold px-3 py-1 rounded-full">9.4</span>
+                </div>
+                <button class="absolute top-4 right-4 bg-white rounded-full p-2 shadow-lg hover:bg-gray-100 transition-colors">
+                    <svg class="w-5 h-5 text-red-500" fill="currentColor" viewBox="0 0 24 24"><path d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"/></svg>
+                </button>
+            </div>
+            <div class="p-4 flex flex-col flex-grow"> <div class="flex items-center justify-between mb-2">
+                    <span class="text-xs text-gray-500 font-medium">American</span>
+                    <span class="text-xs text-gray-500">25-30 min</span>
+                </div>
+                <h3 class="text-lg font-bold text-gray-900 mb-1 group-hover:text-orange-500 transition-colors truncate">Grilled Salmon</h3>
+                <p class="text-gray-600 text-sm mb-4 line-clamp-2 flex-grow">Perfectly grilled Atlantic salmon with herbs and lemon butter sauce.</p>
+                <div class="flex items-center justify-between mt-auto pt-2">
+                    <span class="text-xl font-bold text-gray-900">$24.99</span>
+                    <button class="bg-orange-500 text-white px-3 py-1.5 rounded-full text-xs font-semibold hover:bg-orange-600 transition-colors">Book Now</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="bg-white rounded-2xl shadow-sm overflow-hidden hover:shadow-lg transition-shadow cursor-pointer group flex flex-col border border-gray-100">
+            <div class="relative border-b border-gray-300">
+                <img src="https://images.unsplash.com/photo-1565299624946-b28f40a0ae38?w=600&h=400&fit=crop" alt="Margherita Pizza" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
+                <div class="absolute top-4 left-4">
+                    <span class="bg-orange-500 text-white text-sm font-bold px-3 py-1 rounded-full">9.2</span>
+                </div>
+                <button class="absolute top-4 right-4 bg-white rounded-full p-2 shadow-lg hover:bg-gray-100 transition-colors">
+                    <svg class="w-5 h-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"/></svg>
+                </button>
+            </div>
+            <div class="p-4 flex flex-col flex-grow">
+                <div class="flex items-center justify-between mb-2">
+                    <span class="text-xs text-gray-500 font-medium">Italian</span>
+                    <span class="text-xs text-gray-500">30-40 min</span>
+                </div>
+                <h3 class="text-lg font-bold text-gray-900 mb-1 group-hover:text-orange-500 transition-colors truncate">Margherita Pizza</h3>
+                <p class="text-gray-600 text-sm mb-4 line-clamp-2 flex-grow">Classic homemade pizza with fresh mozzarella, tomatoes, and basil.</p>
+                <div class="flex items-center justify-between mt-auto pt-2">
+                    <span class="text-xl font-bold text-gray-900">$18.99</span>
+                    <button class="bg-orange-500 text-white px-3 py-1.5 rounded-full text-xs font-semibold hover:bg-orange-600 transition-colors">Book Now</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="bg-white rounded-2xl shadow-sm overflow-hidden hover:shadow-lg transition-shadow cursor-pointer group flex flex-col border border-gray-100">
+            <div class="relative border-b border-gray-300">
+                <img src="https://images.unsplash.com/photo-1565299585323-38d6b0865b47?w=600&h=400&fit=crop" alt="Beef Tacos" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
+                <div class="absolute top-4 left-4">
+                    <span class="bg-orange-500 text-white text-sm font-bold px-3 py-1 rounded-full">9.6</span>
+                </div>
+                <button class="absolute top-4 right-4 bg-white rounded-full p-2 shadow-lg hover:bg-gray-100 transition-colors">
+                    <svg class="w-5 h-5 text-red-500" fill="currentColor" viewBox="0 0 24 24"><path d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"/></svg>
+                </button>
+            </div>
+            <div class="p-4 flex flex-col flex-grow">
+                <div class="flex items-center justify-between mb-2">
+                    <span class="text-xs text-gray-500 font-medium">Mexican</span>
+                    <span class="text-xs text-gray-500">20-25 min</span>
+                </div>
+                <h3 class="text-lg font-bold text-gray-900 mb-1 group-hover:text-orange-500 transition-colors truncate">Beef Tacos</h3>
+                <p class="text-gray-600 text-sm mb-4 line-clamp-2 flex-grow">Authentic street-style tacos with seasoned beef and fresh salsa.</p>
+                <div class="flex items-center justify-between mt-auto pt-2">
+                    <span class="text-xl font-bold text-gray-900">$14.99</span>
+                    <button class="bg-orange-500 text-white px-3 py-1.5 rounded-full text-xs font-semibold hover:bg-orange-600 transition-colors">Book Now</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="bg-white rounded-2xl shadow-sm overflow-hidden hover:shadow-lg transition-shadow cursor-pointer group flex flex-col border border-gray-100">
+            <div class="relative border-b border-gray-300">
+                <img src="https://images.unsplash.com/photo-1512621776951-a57141f2eefd?w=600&h=400&fit=crop" alt="Vegetable Bowl" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
+                <div class="absolute top-4 left-4">
+                    <span class="bg-orange-500 text-white text-sm font-bold px-3 py-1 rounded-full">9.0</span>
+                </div>
+                <button class="absolute top-4 right-4 bg-white rounded-full p-2 shadow-lg hover:bg-gray-100 transition-colors">
+                    <svg class="w-5 h-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"/></svg>
+                </button>
+            </div>
+            <div class="p-4 flex flex-col flex-grow">
+                <div class="flex items-center justify-between mb-2">
+                    <span class="text-xs text-gray-500 font-medium">Vegetarian</span>
+                    <span class="text-xs text-gray-500">15-20 min</span>
+                </div>
+                <h3 class="text-lg font-bold text-gray-900 mb-1 group-hover:text-orange-500 transition-colors truncate">Buddha Bowl</h3>
+                <p class="text-gray-600 text-sm mb-4 line-clamp-2 flex-grow">Nutritious grain bowl with roasted vegetables and quinoa.</p>
+                <div class="flex items-center justify-between mt-auto pt-2">
+                    <span class="text-xl font-bold text-gray-900">$16.99</span>
+                    <button class="bg-orange-500 text-white px-3 py-1.5 rounded-full text-xs font-semibold hover:bg-orange-600 transition-colors">Book Now</button>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</section>
+
+
+<section class="px-4 pb-12 md:px-8 lg:px-16 xl:px-24">
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-3">
+        
+        <div class="bg-white rounded-2xl shadow-sm overflow-hidden hover:shadow-lg transition-shadow cursor-pointer group flex flex-col border border-gray-100">
+            <div class="relative border-b border-gray-300">
+                <img src="https://images.unsplash.com/photo-1626082927389-6cd097cdc6ec?w=600&h=400&fit=crop" alt="Grilled Salmon" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
+                <div class="absolute top-4 left-4">
+                    <span class="bg-orange-500 text-white text-sm font-bold px-3 py-1 rounded-full">9.4</span>
+                </div>
+                <button class="absolute top-4 right-4 bg-white rounded-full p-2 shadow-lg hover:bg-gray-100 transition-colors">
+                    <svg class="w-5 h-5 text-red-500" fill="currentColor" viewBox="0 0 24 24"><path d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"/></svg>
+                </button>
+            </div>
+            <div class="p-4 flex flex-col flex-grow"> <div class="flex items-center justify-between mb-2">
+                    <span class="text-xs text-gray-500 font-medium">American</span>
+                    <span class="text-xs text-gray-500">25-30 min</span>
+                </div>
+                <h3 class="text-lg font-bold text-gray-900 mb-1 group-hover:text-orange-500 transition-colors truncate">Grilled Salmon</h3>
+                <p class="text-gray-600 text-sm mb-4 line-clamp-2 flex-grow">Perfectly grilled Atlantic salmon with herbs and lemon butter sauce.</p>
+                <div class="flex items-center justify-between mt-auto pt-2">
+                    <span class="text-xl font-bold text-gray-900">$24.99</span>
+                    <button class="bg-orange-500 text-white px-3 py-1.5 rounded-full text-xs font-semibold hover:bg-orange-600 transition-colors">Book Now</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="bg-white rounded-2xl shadow-sm overflow-hidden hover:shadow-lg transition-shadow cursor-pointer group flex flex-col border border-gray-100">
+            <div class="relative border-b border-gray-300">
+                <img src="https://images.unsplash.com/photo-1565299624946-b28f40a0ae38?w=600&h=400&fit=crop" alt="Margherita Pizza" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
+                <div class="absolute top-4 left-4">
+                    <span class="bg-orange-500 text-white text-sm font-bold px-3 py-1 rounded-full">9.2</span>
+                </div>
+                <button class="absolute top-4 right-4 bg-white rounded-full p-2 shadow-lg hover:bg-gray-100 transition-colors">
+                    <svg class="w-5 h-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"/></svg>
+                </button>
+            </div>
+            <div class="p-4 flex flex-col flex-grow">
+                <div class="flex items-center justify-between mb-2">
+                    <span class="text-xs text-gray-500 font-medium">Italian</span>
+                    <span class="text-xs text-gray-500">30-40 min</span>
+                </div>
+                <h3 class="text-lg font-bold text-gray-900 mb-1 group-hover:text-orange-500 transition-colors truncate">Margherita Pizza</h3>
+                <p class="text-gray-600 text-sm mb-4 line-clamp-2 flex-grow">Classic homemade pizza with fresh mozzarella, tomatoes, and basil.</p>
+                <div class="flex items-center justify-between mt-auto pt-2">
+                    <span class="text-xl font-bold text-gray-900">$18.99</span>
+                    <button class="bg-orange-500 text-white px-3 py-1.5 rounded-full text-xs font-semibold hover:bg-orange-600 transition-colors">Book Now</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="bg-white rounded-2xl shadow-sm overflow-hidden hover:shadow-lg transition-shadow cursor-pointer group flex flex-col border border-gray-100">
+            <div class="relative border-b border-gray-300">
+                <img src="https://images.unsplash.com/photo-1565299585323-38d6b0865b47?w=600&h=400&fit=crop" alt="Beef Tacos" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
+                <div class="absolute top-4 left-4">
+                    <span class="bg-orange-500 text-white text-sm font-bold px-3 py-1 rounded-full">9.6</span>
+                </div>
+                <button class="absolute top-4 right-4 bg-white rounded-full p-2 shadow-lg hover:bg-gray-100 transition-colors">
+                    <svg class="w-5 h-5 text-red-500" fill="currentColor" viewBox="0 0 24 24"><path d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"/></svg>
+                </button>
+            </div>
+            <div class="p-4 flex flex-col flex-grow">
+                <div class="flex items-center justify-between mb-2">
+                    <span class="text-xs text-gray-500 font-medium">Mexican</span>
+                    <span class="text-xs text-gray-500">20-25 min</span>
+                </div>
+                <h3 class="text-lg font-bold text-gray-900 mb-1 group-hover:text-orange-500 transition-colors truncate">Beef Tacos</h3>
+                <p class="text-gray-600 text-sm mb-4 line-clamp-2 flex-grow">Authentic street-style tacos with seasoned beef and fresh salsa.</p>
+                <div class="flex items-center justify-between mt-auto pt-2">
+                    <span class="text-xl font-bold text-gray-900">$14.99</span>
+                    <button class="bg-orange-500 text-white px-3 py-1.5 rounded-full text-xs font-semibold hover:bg-orange-600 transition-colors">Book Now</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="bg-white rounded-2xl shadow-sm overflow-hidden hover:shadow-lg transition-shadow cursor-pointer group flex flex-col border border-gray-100">
+            <div class="relative border-b border-gray-300">
+                <img src="https://images.unsplash.com/photo-1512621776951-a57141f2eefd?w=600&h=400&fit=crop" alt="Vegetable Bowl" class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
+                <div class="absolute top-4 left-4">
+                    <span class="bg-orange-500 text-white text-sm font-bold px-3 py-1 rounded-full">9.0</span>
+                </div>
+                <button class="absolute top-4 right-4 bg-white rounded-full p-2 shadow-lg hover:bg-gray-100 transition-colors">
+                    <svg class="w-5 h-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"/></svg>
+                </button>
+            </div>
+            <div class="p-4 flex flex-col flex-grow">
+                <div class="flex items-center justify-between mb-2">
+                    <span class="text-xs text-gray-500 font-medium">Vegetarian</span>
+                    <span class="text-xs text-gray-500">15-20 min</span>
+                </div>
+                <h3 class="text-lg font-bold text-gray-900 mb-1 group-hover:text-orange-500 transition-colors truncate">Buddha Bowl</h3>
+                <p class="text-gray-600 text-sm mb-4 line-clamp-2 flex-grow">Nutritious grain bowl with roasted vegetables and quinoa.</p>
+                <div class="flex items-center justify-between mt-auto pt-2">
+                    <span class="text-xl font-bold text-gray-900">$16.99</span>
+                    <button class="bg-orange-500 text-white px-3 py-1.5 rounded-full text-xs font-semibold hover:bg-orange-600 transition-colors">Book Now</button>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</section>
+
+ <!-- part 1 end -->
+
       <section class="px-4 pb-12 md:px-8 lg:px-16 xl:px-24">
          <!-- Food Cards Grid -->
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
