--- a/public/foods/index.html
+++ b/public/foods/index.html
@@ -355,6 +355,7 @@
 
             <div class="mb-2">
                 <h3 class="text-[16px] font-bold text-gray-900 truncate">Garlic Butter Shrimp</h3>
+                <p class="text-gray-600 mb-2"></p>
                 <p class="text-black text-sm">NY</p>
             </div>
 
@@ -1483,7 +1484,7 @@
         <div class="relative w-full h-[557px] rounded-3xl overflow-hidden mb-6" style="background-image: url('../img/happy_faces/n.png'); background-size: cover; background-position: center; background-repeat: no-repeat;">
             <div class="absolute inset-0 bg-black bg-opacity-30 flex items-center">
                 <div class="px-8 py-6 bg-white rounded-2xl max-w-[430px] mr-4 ml-16">
-                    <h2 class="text-4xl font-bold mb-[26.4px] text-gray-800">Get subscription: Save over $530/mo</h2>
+                    <h2 class="text-4xl  mb-[26.4px] text-gray-800">Get subscription: Save over $530/mo</h2>
                     <p class="text-lg mb-4 text-black">Great food is better with company. Subscribe to your favorite local hosts and save big on home-cooked favorites. Average savings: $40/week.*</p>
                     <button class="bg-blue-600 text-white font-semibold px-6 py-3 rounded-full hover:bg-blue-700 transition-colors">Get it now</button>
                 </div>
