--- a/public/foods/index.html
+++ b/public/foods/index.html
@@ -1516,6 +1516,74 @@
 
 
 
+<!-- garden1 start -->
+    <div class="pb-12 w-full">
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+      
+        <section class="flex flex-col w-full h-full">
+            <div class="bg-white rounded-[2rem] border border-gray-200 overflow-hidden relative transition-all flex flex-col h-full shadow-sm hover:shadow-md">
+                <div class="relative h-[27rem] overflow-hidden mini-carousel flex-shrink-0">
+                    <img src="../img/Backyard/green.jpg?w=800&h=1200&fit=crop" alt="Garden" class="carousel-img absolute inset-0 w-full h-full object-cover">
+                    <img src="https://images.unsplash.com/photo-1532550907401-a500c9a57435?w=800&h=1200&fit=crop" alt="Lobster Tail 2" class="carousel-img absolute inset-0 w-full h-full object-cover transition-opacity duration-300 opacity-0">
+                    <button class="mini-prev absolute left-3 top-1/2 -translate-y-1/2 bg-white/80 p-2 rounded-full shadow-lg">‹</button>
+                    <button class="mini-next absolute right-3 top-1/2 -translate-y-1/2 bg-white/80 p-2 rounded-full shadow-lg">›</button>
+                </div>
+
+                <div class="p-6 bg-gray-100 flex flex-col flex-grow">
+                    <p class="text-black text-xs font-normal mb-1">garden is calling</p>
+                    <h3 class="text-sm font-semibold text-gray-800 mb-6 leading-relaxed flex-grow">
+                        From spontaneous dinners find the best value for your neighborhood dining experience.
+                    </h3>
+                    <div class="flex justify-start mt-auto">
+                        <button class="bg-orange-500 hover:bg-orange-600 text-white font-bold px-10 py-3 rounded-full transition-all">Book Now</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="flex flex-col w-full h-full">
+            <div class="bg-white rounded-[2rem] border border-gray-200 overflow-hidden relative transition-all flex flex-col h-full shadow-sm hover:shadow-md">
+                <div class="relative h-[27rem] overflow-hidden mini-carousel flex-shrink-0">
+                    <img src="../img/Backyard/utah--patio.jpg?w=800&h=1200&fit=crop" alt="Patio" class="carousel-img absolute inset-0 w-full h-full object-cover">
+                    <img src="https://images.unsplash.com/photo-1532550907401-a500c9a57435?w=800&h=1200&fit=crop" alt="Lobster Tail 2" class="carousel-img absolute inset-0 w-full h-full object-cover transition-opacity duration-300 opacity-0">
+                    <button class="mini-prev absolute left-3 top-1/2 -translate-y-1/2 bg-white/80 p-2 rounded-full shadow-lg">‹</button>
+                    <button class="mini-next absolute right-3 top-1/2 -translate-y-1/2 bg-white/80 p-2 rounded-full shadow-lg">›</button>
+                </div>
+
+                <div class="p-6 bg-gray-100 flex flex-col flex-grow">
+                    <p class="text-black text-xs font-normal mb-1">Top dishes for spring</p>
+                    <h3 class="text-sm font-semibold text-gray-800 mb-6 leading-relaxed flex-grow">
+                        Will it be patio brunch, lazy garden picnics, sunset rooftop snacks, or countryside cookouts?
+                    </h3>
+                    <div class="flex justify-start mt-auto">
+                        <button class="bg-orange-500 hover:bg-orange-600 text-white font-bold px-10 py-3 rounded-full transition-all">Book Now</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="flex flex-col w-full h-full">
+            <div class="bg-white rounded-[2rem] border border-gray-200 overflow-hidden relative transition-all flex flex-col h-full shadow-sm hover:shadow-md">
+                <div class="relative h-[27rem] overflow-hidden mini-carousel flex-shrink-0">
+                    <img src="../img/Backyard/OIP.webp?w=800&h=1200&fit=crop" alt="Guest Favorites" class="carousel-img absolute inset-0 w-full h-full object-cover">
+                    <button class="mini-prev absolute left-3 top-1/2 -translate-y-1/2 bg-white/80 p-2 rounded-full shadow-lg">‹</button>
+                    <button class="mini-next absolute right-3 top-1/2 -translate-y-1/2 bg-white/80 p-2 rounded-full shadow-lg">›</button>
+                </div>
+
+                <div class="p-6 bg-gray-100 flex flex-col flex-grow">
+                    <p class="text-black text-xs font-normal mb-1">Loved by Guests</p>
+                    <h3 class="text-sm font-semibold text-gray-800 mb-6 leading-relaxed flex-grow">
+                        Foodie-loved. Our best, guest-approved tables.
+                    </h3>
+                    <div class="flex justify-start mt-auto">
+                        <button class="bg-orange-500 hover:bg-orange-600 text-white font-bold px-10 py-3 rounded-full transition-all">View More</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+</div>
+ <!-- garden1 end -->
 
 <!-- garden starts  -->
     <div class="pb-12">
