--- a/public/foods/index.html
+++ b/public/foods/index.html
@@ -1518,13 +1518,12 @@
 
 <!-- garden1 start -->
     <div class="pb-12 w-full">
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-[14.4px]">
       
         <section class="flex flex-col w-full h-full">
             <div class="bg-white rounded-[2rem] border border-gray-200 overflow-hidden relative transition-all flex flex-col h-full shadow-sm hover:shadow-md">
                 <div class="relative h-[27rem] overflow-hidden mini-carousel flex-shrink-0">
                     <img src="../img/Backyard/green.jpg?w=800&h=1200&fit=crop" alt="Garden" class="carousel-img absolute inset-0 w-full h-full object-cover">
-                    <img src="https://images.unsplash.com/photo-1532550907401-a500c9a57435?w=800&h=1200&fit=crop" alt="Lobster Tail 2" class="carousel-img absolute inset-0 w-full h-full object-cover transition-opacity duration-300 opacity-0">
                     <button class="mini-prev absolute left-3 top-1/2 -translate-y-1/2 bg-white/80 p-2 rounded-full shadow-lg">‹</button>
                     <button class="mini-next absolute right-3 top-1/2 -translate-y-1/2 bg-white/80 p-2 rounded-full shadow-lg">›</button>
                 </div>
@@ -1545,7 +1544,6 @@
             <div class="bg-white rounded-[2rem] border border-gray-200 overflow-hidden relative transition-all flex flex-col h-full shadow-sm hover:shadow-md">
                 <div class="relative h-[27rem] overflow-hidden mini-carousel flex-shrink-0">
                     <img src="../img/Backyard/utah--patio.jpg?w=800&h=1200&fit=crop" alt="Patio" class="carousel-img absolute inset-0 w-full h-full object-cover">
-                    <img src="https://images.unsplash.com/photo-1532550907401-a500c9a57435?w=800&h=1200&fit=crop" alt="Lobster Tail 2" class="carousel-img absolute inset-0 w-full h-full object-cover transition-opacity duration-300 opacity-0">
                     <button class="mini-prev absolute left-3 top-1/2 -translate-y-1/2 bg-white/80 p-2 rounded-full shadow-lg">‹</button>
                     <button class="mini-next absolute right-3 top-1/2 -translate-y-1/2 bg-white/80 p-2 rounded-full shadow-lg">›</button>
                 </div>
@@ -1694,7 +1692,7 @@
 
             <div class="w-full md:w-1/2 flex items-center p-8 md:p-12">
                 <div class="text-gray-900">
-                    <h3 class="text-3xl font-semibold mb-2"> Introduce yourself to new neighbors, fresh flavors, and the joy of a shared table.</h3>
+                    <h3 class="text-xl font-semibold mb-2"> Introduce yourself to new neighbors, fresh flavors, and the joy of a shared table.</h3>
                     <p class="text-lg mb-6 text-gray-600 leading-relaxed">
                         “Pay over time with Affirm”. Terms apply.!
                     </p>
