--- a/public/foods/index.html
+++ b/public/foods/index.html
@@ -1533,9 +1533,13 @@
                     <h3 class="text-sm font-semibold text-gray-800 mb-6 leading-relaxed flex-grow">
                         From spontaneous dinners find the best value for your neighborhood dining experience.
                     </h3>
+                    
                     <div class="flex justify-start mt-auto">
-                        <button class="bg-orange-500 hover:bg-orange-600 text-white font-bold px-10 py-3 rounded-full transition-all">Book Now</button>
+                        <button class="bg-orange-500 hover:bg-orange-600 text-white font-bold px-6 py-2 text-sm rounded-full transition-all">
+                            Book Now
+                        </button>
                     </div>
+
                 </div>
             </div>
         </section>
@@ -1553,8 +1557,11 @@
                     <h3 class="text-sm font-semibold text-gray-800 mb-6 leading-relaxed flex-grow">
                         Will it be patio brunch, lazy garden picnics, sunset rooftop snacks, or countryside cookouts?
                     </h3>
+
                     <div class="flex justify-start mt-auto">
-                        <button class="bg-orange-500 hover:bg-orange-600 text-white font-bold px-10 py-3 rounded-full transition-all">Book Now</button>
+                        <button class="bg-orange-500 hover:bg-orange-600 text-white font-bold px-6 py-2 text-sm rounded-full transition-all">
+                            Book Now
+                        </button>
                     </div>
                 </div>
             </div>
@@ -1573,8 +1580,13 @@
                     <h3 class="text-sm font-semibold text-gray-800 mb-6 leading-relaxed flex-grow">
                         Foodie-loved. Our best, guest-approved tables.
                     </h3>
-                    <div class="flex justify-start mt-auto">
+                    <!-- <div class="flex justify-start mt-auto">
                         <button class="bg-orange-500 hover:bg-orange-600 text-white font-bold px-10 py-3 rounded-full transition-all">View More</button>
+                    </div> -->
+                    <div class="flex justify-start mt-auto">
+                        <button class="bg-orange-500 hover:bg-orange-600 text-white font-bold px-6 py-2 text-sm rounded-full transition-all">
+                            View More
+                        </button>
                     </div>
                 </div>
             </div>
@@ -1603,7 +1615,8 @@
                     <p class="text-lg mb-6 text-gray-600 leading-relaxed">
                         “Pay over time with Affirm”. Terms apply.!
                     </p>
-                    <button class="bg-orange-500 text-white font-bold px-8 py-3 rounded-full hover:bg-orange-600 transition-all shadow-sm active:scale-95">
+                    
+                    <button class="bg-orange-500 text-white font-bold px-5 py-1.5 text-sm rounded-full hover:bg-orange-600 transition-all shadow-sm active:scale-95">
                         View Details
                     </button>
                 </div>
@@ -1621,7 +1634,7 @@
         <div class="relative w-full h-[557px] rounded-3xl overflow-hidden mb-6" style="background-image: url('../img/happy_faces/g.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
             <div class="absolute inset-0 bg-black bg-opacity-30 flex items-center">
                 <div class="px-8 py-6 bg-white rounded-2xl max-w-[461px] mr-4 ml-16">
-                    <h2 class="text-4xl font-bold mb-[26.4px] text-gray-800">Host your table confidently with InstaDelicious. </h2>
+                    <h2 class="text-4xl mb-[26.4px] text-gray-800">Host your table confidently with InstaDelicious. </h2>
                     <p class="text-lg mb-4 text-gray-600"> Great food is better with company. Subscribe to your favorite local hosts and save big on home-cooked favorites. Average savings: $40/week.*</p>
                     <button class="bg-blue-600 text-white font-semibold px-6 py-3 rounded-full hover:bg-blue-700 transition-colors">Open your Kitchen</button>
                 </div>
